experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/341/log-1-341.log

Test.java:31: error: bad operand types for binary operator '^'
            i += (int) (f ^ j2);
                          ^
  first type:  float
  second type: long
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

